--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" />
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.4/dist/flowbite.min.css" />
@@ -22,7 +25,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="h-14">
     <!-- Navbar -->
     <nav class="
           navbar navbar-expand-lg
@@ -198,7 +201,7 @@
     </div>
 
   </header>
-  <main>
+  <main class="min-h-screen">
 
     <!-- Title -->
     <section>
@@ -216,7 +219,7 @@
         rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-      <div class="min-h-screen flex justify-center pt-8">
+      <div class="flex justify-center pt-8 mb-20">
         <div class="">
           <div class="text-center font-semibold">
             <h1 class="text-5xl">
@@ -227,7 +230,7 @@
               Choose a plan that works best for you and<br /> your team.
             </p>
           </div>
-          <!-- Modifiche -->
+
           <div class="pt-24 flex flex-col lg:flex-row divide-y-8 justify-center items-center">
             <!-- Basic Card -->
             <div class="w-96 p-8 bg-gray-800 text-center rounded-3xl lg:pr-16 shadow-xl">
@@ -379,8 +382,23 @@
       </div>
     </section>
 
-    <!-- Streaming -->
+    <!-- Cosa offriamo -->
     <section>
+      <div class="flex flex-col lg:flex-row m-10">
+        <div>
+          <img
+            src="https://content.rsggroup.com/image/upload/q_auto:best,f_auto,dpr_2/v1628073503/McFIT%20Website/McFIT_IT_BAF_1920x1080_210804"
+            alt="1 Amico = 1 Mese Gratis*">
+        </div>
+        <div class="">
+          <h2>Ancora piu building</h2>
+          <p>Passa a prendere un amico, portalo in palestra con te e godetevi insieme le infinite possibilità di
+            allenamento di McFIT: corsi LIVE, Group Workout, functional training e molto altro ancora.
+
+            Se il tuo amico dovesse iscriversi in McFIT, ti regaliamo un mese di allenamento. Vuoi ancora di più?
+            D’accordo. Perché più amici si iscriveranno, più mesi gratuiti ti daremo al rinnovo del tuo contratto.</p>
+        </div>
+      </div>
 
 
     </section>
