--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <p class="">LOGO</p>
           <ul class="sm:flex hidden space-x-4">
             <li>Home</li>
-            <li>News</li>
+            <li>QR-Code</li>
             <li>Profile</li>
           </ul>
           <button type="button" class="sm:hidden transition duration-75" aria-controls="sidebar"
@@ -74,7 +74,7 @@
                   <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
                   <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
                 </svg>
-                <span class="ml-3">Dashboard</span>
+                <span class="ml-3">Home</span>
               </a>
             </li>
             <li>
@@ -88,7 +88,7 @@
                     d="M10 2a4 4 0 00-4 4v1H5a1 1 0 00-.994.89l-1 9A1 1 0 004 18h12a1 1 0 00.994-1.11l-1-9A1 1 0 0015 7h-1V6a4 4 0 00-4-4zm2 5V6a2 2 0 10-4 0v1h4zm-6 3a1 1 0 112 0 1 1 0 01-2 0zm7-1a1 1 0 100 2 1 1 0 000-2z"
                     clip-rule="evenodd"></path>
                 </svg>
-                <span class="flex-1 ml-3 text-left whitespace-nowrap" sidebar-toggle-item>E-commerce</span>
+                <span class="flex-1 ml-3 text-left whitespace-nowrap" sidebar-toggle-item>Piani</span>
                 <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
                   xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd"
@@ -99,15 +99,15 @@
               <ul id="dropdown-example" class="hidden py-2 space-y-2">
                 <li>
                   <a href="#" class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg 
-                    transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Products</a>
+                    transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Gym-Basic</a>
                 </li>
                 <li>
                   <a href="#" class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg 
-                    transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Billing</a>
+                    transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Stream-Gym</a>
                 </li>
                 <li>
                   <a href="#" class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg 
-                    transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Invoice</a>
+                    transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Gym-Student</a>
                 </li>
               </ul>
             </li>
@@ -121,7 +121,7 @@
                     d="M5 3a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2V5a2 2 0 00-2-2H5zM5 11a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2v-2a2 2 0 00-2-2H5zM11 5a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V5zM11 13a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z">
                   </path>
                 </svg>
-                <span class="flex-1 ml-3 whitespace-nowrap">Kanban</span>
+                <span class="flex-1 ml-3 whitespace-nowrap">Lavora con noi</span>
                 <span
                   class="inline-flex justify-center items-center px-2 ml-3 text-sm font-medium text-gray-800 bg-gray-200 rounded-full dark:bg-gray-700 dark:text-gray-300">Pro</span>
               </a>
@@ -139,7 +139,7 @@
                     d="M3 5a2 2 0 012-2h1a1 1 0 010 2H5v7h2l1 2h4l1-2h2V5h-1a1 1 0 110-2h1a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2V5z">
                   </path>
                 </svg>
-                <span class="flex-1 ml-3 whitespace-nowrap">Inbox</span>
+                <span class="flex-1 ml-3 whitespace-nowrap">Notifiche</span>
                 <span
                   class="inline-flex justify-center items-center p-3 ml-3 w-3 h-3 text-sm font-medium text-blue-600 bg-blue-200 rounded-full dark:bg-blue-900 dark:text-blue-200">3</span>
               </a>
@@ -153,9 +153,10 @@
                   <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd">
                   </path>
                 </svg>
-                <span class="flex-1 ml-3 whitespace-nowrap">Users</span>
+                <span class="flex-1 ml-3 whitespace-nowrap">Profilo</span>
               </a>
             </li>
+            <!--
             <li>
               <a href="#"
                 class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700">
@@ -169,6 +170,7 @@
                 <span class="flex-1 ml-3 whitespace-nowrap">Products</span>
               </a>
             </li>
+            -->
             <li>
               <a href="#"
                 class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700">
@@ -223,21 +225,21 @@
         <div class="">
           <div class="text-center font-semibold">
             <h1 class="text-5xl">
-              <span class="text-blue-700 tracking-wide">Flexible </span>
-              <span>Plans</span>
+              <span class="text-blue-700 tracking-wide">Piani </span>
+              <span>Flessibili</span>
             </h1>
             <p class="pt-6 text-xl text-gray-400 font-normal w-full px-8 md:w-full">
-              Choose a plan that works best for you and<br /> your team.
+              Stream-Gym ti da la possibilità di scegliere il piano <br /> perfetto per te.
             </p>
           </div>
 
           <div class="pt-24 flex flex-col lg:flex-row divide-y-8 justify-center items-center">
-            <!-- Basic Card -->
-            <div class="w-96 p-8 bg-gray-800 text-center rounded-3xl lg:pr-16 shadow-xl">
-              <h1 class="text-white font-semibold text-2xl">Basic</h1>
+            <!-- Gym Card -->
+            <div class=" w-96 p-8 bg-gray-800 text-center rounded-3xl lg:pr-16 shadow-xl">
+              <h1 class="text-white font-semibold text-2xl">Gym-Basic</h1>
               <p class="pt-2 tracking-wide">
                 <span class="text-gray-400 align-top">$ </span>
-                <span class="text-white text-3xl font-semibold">10</span>
+                <span class="text-white text-3xl font-semibold">35</span>
                 <span class="text-gray-400 font-medium">/ user</span>
               </p>
               <hr class="mt-4 border-1">
@@ -246,8 +248,8 @@
                   <span class="material-icons align-middle">
                     done
                   </span>
-                  <span class="pl-2">
-                    Get started with <span class="text-white">messaging</span>
+                  <span class="  pl-2">
+                    Accesso a Palestra e Piscina</span>
                   </span>
                 </p>
                 <p class="font-semibold text-gray-400 text-left pt-5">
@@ -255,7 +257,7 @@
                     done
                   </span>
                   <span class="pl-2">
-                    Flexible <span class="text-white">team meetings</span>
+                    24h/24h <span class="text-white">365</span> giorni l'anno
                   </span>
                 </p>
                 <p class="font-semibold text-gray-400 text-left pt-5">
@@ -263,9 +265,10 @@
                     done
                   </span>
                   <span class="pl-2">
-                    <span class="text-white">5 TB</span> cloud storage
+                    <span class="text-white">Over 50 </span> -15% su corso a scelta
                   </span>
                 </p>
+                
 
                 <a href="#" class="">
                   <p class="w-full py-4 bg-blue-600 mt-8 rounded-xl text-white">
@@ -279,13 +282,13 @@
                 </a>
               </div>
             </div>
-            <!-- StartUp Card -->
+            <!-- Stream-Gym Card -->
             <div class="w-96 lg:w-80 p-8 bg-gray-900 text-center rounded-3xl text-white  
               shadow-xl transform lg:border-4 lg:border-white lg:scale-125">
-              <h1 class="text-white font-semibold text-2xl">Startup</h1>
+              <h1 class="text-white font-semibold text-2xl">Stream-Gym</h1>
               <p class="pt-2 tracking-wide">
                 <span class="text-gray-400 align-top">$ </span>
-                <span class="text-3xl font-semibold">24</span>
+                <span class="text-3xl font-semibold">45</span>
                 <span class="text-gray-400 font-medium">/ user</span>
               </p>
               <hr class="mt-4 border-1 border-gray-600">
@@ -295,7 +298,7 @@
                     done
                   </span>
                   <span class="pl-2">
-                    All features in <span class="text-white">Basic</span>
+                  Accesso a Palestra,Piscina  <span class="text-white">Benessere</span>
                   </span>
                 </p>
                 <p class="font-semibold text-gray-400 text-left pt-5">
@@ -303,7 +306,7 @@
                     done
                   </span>
                   <span class="pl-2">
-                    Flexible <span class="text-white">call scheduling</span>
+                    24h/24h <span class="text-white">365</span> giorni l'anno
                   </span>
                 </p>
                 <p class="font-semibold text-gray-400 text-left pt-5">
@@ -311,7 +314,7 @@
                     done
                   </span>
                   <span class="pl-2">
-                    <span class="text-white">15 TB</span> cloud storage
+                    <span class="text-white">Corsi in streaming</span>
                   </span>
                 </p>
 
@@ -330,12 +333,12 @@
                 <p class="bg-blue-700 font-semibold px-4 py-1 rounded-full uppercase text-xs">Popular</p>
               </div>
             </div>
-            <!-- Enterprise Card -->
+            <!-- Student Card -->
             <div class="w-96 p-8 bg-gray-800 text-center rounded-3xl lg:pl-16 shadow-xl">
-              <h1 class="text-white font-semibold text-2xl">Enterprise</h1>
+              <h1 class="text-white font-semibold text-2xl">Gym-Student</h1>
               <p class="pt-2 tracking-wide">
                 <span class="text-gray-400 align-top">$ </span>
-                <span class="text-white text-3xl font-semibold">35</span>
+                <span class="text-white text-3xl font-semibold">25</span>
                 <span class="text-gray-400 font-medium">/ user</span>
               </p>
               <hr class="mt-4 border-1">
@@ -345,7 +348,7 @@
                     done
                   </span>
                   <span class="pl-2">
-                    All features in <span class="text-white">Startup</span>
+                    Accesso a Palestra e Piscina
                   </span>
                 </p>
                 <p class="font-semibold text-gray-400 text-left pt-5">
@@ -353,7 +356,7 @@
                     done
                   </span>
                   <span class="pl-2">
-                    Growth <span class="text-white">oriented</span>
+                    24h/24h <span class="text-white">365</span> giorni l'anno
                   </span>
                 </p>
                 <p class="font-semibold text-gray-400 text-left pt-5">
@@ -361,7 +364,15 @@
                     done
                   </span>
                   <span class="pl-2">
-                    <span class="text-white">Unlimited</span> cloud storage
+                    Pagamento ogni  <span class="text-white">3 mesi</span>
+                  </span>
+                </p>
+                <p class="font-semibold text-gray-400 text-left pt-5">
+                  <span class="material-icons align-middle">
+                    done
+                  </span>
+                  <span class="pl-2">
+                    Stop abbonamento   <span class="text-white">3 mesi l'anno</span>
                   </span>
                 </p>
 
